feat: league edit method
