# src/docs/swagger.json
@@ -590,6 +590,12 @@
                       },
                       "host": {
                         "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      },
+                      "timestamp": {
+                        "type": "string"
                       }
                     }
                   }
@@ -604,6 +610,110 @@
       }
     },
     "/league/{id}": {
+      "put": {
+        "tags": ["league"],
+        "summary": "Edit league data",
+        "description": "Edit league data",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "League object id"
+          }
+        ],
+        "requestBody": {
+          "description": "League data",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "type": "string"
+                  },
+                  "applicationDeadline": {
+                    "type": "string",
+                    "pattern": "/([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/",
+                    "example": "2019-05-17",
+                    "format": "date"
+                  },
+                  "leagueStartDay": {
+                    "type": "string",
+                    "pattern": "/([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/",
+                    "example": "2019-05-17",
+                    "format": "date"
+                  },
+                  "leagueEndDay": {
+                    "type": "string",
+                    "pattern": "/([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/",
+                    "example": "2019-05-17",
+                    "format": "date"
+                  },
+                  "introduce": {
+                    "type": "string"
+                  },
+                  "rule": {
+                    "type": "string"
+                  },
+                  "thumbnail": {
+                    "type": "string"
+                  },
+                  "game": {
+                    "type": "string"
+                  },
+                  "teamMin": {
+                    "type": "number"
+                  },
+                  "teamMax": {
+                    "type": "number"
+                  },
+                  "teamReqMemCnt": {
+                    "type": "number"
+                  },
+                  "placeType": {
+                    "type": "string"
+                  },
+                  "discordLink": {
+                    "type": "string"
+                  },
+                  "location": {
+                    "type": "string"
+                  },
+                  "status": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          }
+        }
+      },
       "get": {
         "tags": ["league"],
         "summary": "Get detail of the league",
@@ -1290,6 +1400,12 @@
             "items": {
               "type": "string"
             }
+          },
+          "status": {
+            "type": "string"
+          },
+          "timestamp": {
+            "type": "string"
           }
         }
       },
