# src/models/League.ts
@@ -20,6 +20,8 @@ const League = new Schema(
     applicant: { type: Number, default: 0 },
     host: Schema.Types.ObjectId,
     teams: [Schema.Types.ObjectId],
+    status: { type: String, default: 'RECRUIT' },
+    timestamp: { type: Date, default: Date.now() },
   },
   {
     versionKey: false,
@@ -58,4 +60,6 @@ export interface ILeague extends Document {
   applicant?: number;
   host?: Schema.Types.ObjectId;
   teams?: Schema.Types.ObjectId[];
+  status: 'RECRUIT' | 'FULLED' | 'RECRUIT_DONE' | 'INPROGRESS' | 'COMPLETE' | 'CANCLED';
+  timestamp?: Date;
 }
