# src/routes/api/v1/league.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 
 import {
-  create, list, read, remove,
+  create, edit, list, read, remove,
 } from '../../../controllers/league';
 import auth from '../../../middleware/auth';
 
@@ -9,6 +9,7 @@ const router = Router();
 
 router.post('/', auth, create);
 router.get('/', list);
+router.put('/:id', auth, edit);
 router.get('/:id', read);
 router.delete('/:id', auth, remove);
 
